<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/resdetail_activity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:id="@+id/resdetail_bigpiclayout"
        app:cardCornerRadius="20dp">
        <ImageView
        android:id="@+id/resdetail_bigpic"
        android:layout_width="340dp"
        android:layout_height="321dp"
        android:scaleType="centerCrop"
        />
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/resdetail_titlelayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resdetail_bigpiclayout"
        android:layout_marginTop="16dp"
        android:layout_alignLeft="@+id/resdetail_bigpiclayout">

        <TextView
            android:id="@+id/restaurant_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:gravity="center_vertical"
            android:lineSpacingExtra="0sp"
            android:text="@string/katsuei"
            android:textAppearance="@style/katsuei" />
        <TextView
            android:id="@+id/japenese_su"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/restaurant_title"
            android:layout_marginLeft="8dp"
            android:text="@string/japenese_su"
            android:fontFamily="@font/noto_sans"
            android:textAppearance="@style/japenese_su"
            android:lineSpacingExtra="0sp"
            />
    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/badge_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_alignLeft="@+id/resdetail_titlelayout"
        android:layout_below="@id/resdetail_titlelayout"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/badgecolor"
        app:cardElevation="0dp"
        >
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/icon_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8.32dp"
            android:layout_gravity="center_vertical"
            android:clipToOutline="true"
            android:background="@drawable/ic_clock"
            />

        <TextView
            android:id="@+id/min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="8.32dp"
            android:fontFamily="@font/noto_sans"
            android:gravity="start"
            android:lineSpacingExtra="0sp"
            android:text="@string/min"
            android:textAppearance="@style/min" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/badge_Price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_toEndOf="@id/badge_time"
        android:layout_marginLeft="8dp"
        android:layout_below="@id/resdetail_titlelayout"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/badgecolor"
        app:cardElevation="0dp"
        >
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/icon_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8.32dp"
            android:layout_gravity="center_vertical"
            android:clipToOutline="true"
            android:background="@drawable/ic_money"
            />

        <TextView
            android:id="@+id/badge_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="8.32dp"
            android:fontFamily="@font/noto_sans"
            android:gravity="start"
            android:lineSpacingExtra="0sp"
            android:text="@string/badge_money"
            android:textAppearance="@style/min" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/badge_ratings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_toEndOf="@id/badge_Price"
        android:layout_marginLeft="8dp"
        android:layout_below="@id/resdetail_titlelayout"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/badgecolor"
        app:cardElevation="0dp"
        >
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/icon_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8.32dp"
            android:layout_gravity="center_vertical"
            android:clipToOutline="true"
            android:background="@drawable/ic_rating"
            />

        <TextView
            android:id="@+id/ratings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="8.32dp"
            android:fontFamily="@font/noto_sans"
            android:gravity="start"
            android:lineSpacingExtra="0sp"
            android:text="@string/ratings"
            android:textAppearance="@style/min" />
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/title_divid"
        android:layout_width="375dp"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/badge_time"
        android:background="@color/title_divid"
        />

    <RelativeLayout
        android:id="@+id/resdetail_timelayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_divid"
        android:layout_marginTop="16dp"
        android:layout_alignLeft="@+id/resdetail_bigpiclayout">
        <TextView
            android:id="@+id/restaurant_timetitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:text="@string/resonlinetitle"
            android:textAppearance="@style/timetitle"
            android:lineSpacingExtra="0sp"
            android:gravity="center_vertical"
            />
        <TextView
            android:id="@+id/restaurant_timedeatil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/restaurant_timetitle"
            android:layout_alignLeft="@id/restaurant_timetitle"
            android:layout_marginLeft="46dp"
            android:text="@string/resonlinetime"
            android:fontFamily="@font/noto_sans"
            android:textAppearance="@style/timedetail"
            android:lineSpacingExtra="0sp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/resdetail_paylayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resdetail_timelayout"
        android:layout_alignLeft="@+id/resdetail_bigpiclayout">
        <TextView
            android:id="@+id/restaurant_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:text="@string/payments"
            android:textAppearance="@style/timetitle"
            android:lineSpacingExtra="0sp"
            />
        <RelativeLayout
            android:id="@+id/restaurant_left"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/restaurant_pay"
            android:layout_alignLeft="@id/restaurant_pay"
            android:layout_marginLeft="6dp"
            >
            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/bi_cash_sta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_cash"
                />
            <TextView
                android:id="@+id/cash_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash"
                android:textAppearance="@style/payments_detail"
                android:lineSpacingExtra="0sp"
                android:layout_toRightOf="@id/bi_cash_sta"
                android:layout_marginLeft="14dp"
                android:fontFamily="@font/noto_sans"
                />

            <RelativeLayout
                android:id="@+id/pay_checked_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/ic_pay_checked" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/restaurant_left_2"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/restaurant_left"
            android:layout_alignLeft="@id/restaurant_pay"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            >
            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/five_ticket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_five_ticket"
                />
            <TextView
                android:id="@+id/five_ticket_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fiveticket"
                android:textAppearance="@style/payments_detail"
                android:lineSpacingExtra="0sp"
                android:layout_toRightOf="@id/five_ticket"
                android:layout_marginLeft="14dp"
                android:fontFamily="@font/noto_sans"
                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_pay_checked"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/restaurant_left_3"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/restaurant_left_2"
            android:layout_alignLeft="@id/restaurant_pay"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="7dp"
            >
            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/samsung_pay_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_samsungpay"
                />
            <TextView
                android:id="@+id/samsungpay_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/samsungpay"
                android:textAppearance="@style/payments_detail"
                android:textSize="15sp"
                android:lineSpacingExtra="0sp"
                android:layout_toRightOf="@id/samsung_pay_icon"
                android:layout_marginLeft="14dp"
                android:fontFamily="@font/noto_sans"
                />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/ic_pay_checked" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/restaurant_right"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/restaurant_pay"
            android:layout_toRightOf="@id/restaurant_left"
            android:layout_marginLeft="11dp">
            <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/credit_card_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_credit_card"
            />
            <TextView
                android:id="@+id/credit_card_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit_card"
                android:textAppearance="@style/payments_detail"
                android:lineSpacingExtra="0sp"
                android:layout_toRightOf="@id/credit_card_icon"
                android:layout_marginLeft="12dp"
                android:fontFamily="@font/noto_sans"
                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_pay_checked"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/restaurant_right_2"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/restaurant_right"
            android:layout_marginTop="6dp"
            android:layout_toRightOf="@id/restaurant_left"
            android:layout_marginLeft="11dp">
            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/easycard_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_easy_card"
                />
            <TextView
                android:id="@+id/easycard_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/easycard"
                android:textAppearance="@style/payments_detail"
                android:lineSpacingExtra="0sp"
                android:layout_toRightOf="@id/easycard_icon"
                android:layout_marginLeft="12dp"
                android:fontFamily="@font/noto_sans"
                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_pay_checked"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/restaurant_right_3"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/restaurant_right_2"
            android:layout_marginTop="7dp"
            android:layout_toRightOf="@id/restaurant_left"
            android:layout_marginLeft="11dp">
            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/apple_pay_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_applepay"
                />
            <TextView
                android:id="@+id/applepay_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/applepay"
                android:textAppearance="@style/payments_detail"
                android:lineSpacingExtra="0sp"
                android:layout_toRightOf="@id/apple_pay_icon"
                android:layout_marginLeft="12dp"
                android:fontFamily="@font/noto_sans"
                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_pay_checked"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
</ScrollView>